--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <div>helloworld</div>
-    <a href="./public/mediastream/index.html"></a>
+    <a href="./public/mediastream/index.html">跳转</a>
 </body>
 </html>
