--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>zhangyu</title>
 </head>
+
 <body>
-    <div>helloworld</div>
-    <a href="./public/mediastream/index.html">跳转</a>
+    <div>WebRTC学习Demo
+        <a href="./public/device/index.html">设备获取</a>
+        <a href="./public/mediastream/index.html">音视频获取</a>
+    </div>
 </body>
+
 </html>
