Revert "Update index.html"
This reverts commit a8be4dcd742bd9e5815244f83dad8ff78f00e2fe.

--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
 </head>
 
 <body>
-    <h1>WebRTC学习Demo</h1>
-    <p>
+    <div>WebRTC学习Demo
         <a href="./public/device/index.html">设备获取</a>
         <a href="./public/mediastream/index.html">音视频获取</a>
-    </p>
+    </div>
 </body>
 
 </html>
