--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div>WebRTC学习Demo
         <a href="./public/device/index.html">设备获取</a>
-        <a href="./public/mediastream/index.html">音视频获取</a>
+        <a href="./public/mediastream/index.html">获取音视频</a>
     </div>
 </body>
 
