--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div>WebRTC学习Demo
         <a href="./public/device/index.html">设备获取</a>
         <a href="./public/mediastream/index.html">获取音视频</a>
+        <a href="./public/mediastream/index.html">获取音视频</a>
     </div>
 </body>
 
