--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 
 <body>
-    <div>WebRTC学习Demo
+    <h1>WebRTC学习Demo</h1>
+    <p>
         <a href="./public/device/index.html">设备获取</a>
         <a href="./public/mediastream/index.html">获取音视频</a>
-        <a href="./public/mediastream/index.html">获取音视频</a>
-    </div>
+    </p>
 </body>
 
 </html>
