--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 
 <body>
     <h1>WebRTC学习Demo</h1>
-    <p>
-        <a href="./public/device/index.html">设备获取</a>
-        <a href="./public/mediastream/index.html">获取音视频</a>
-    </p>
+    <ul>
+        <li><a href="./public/device/index.html">设备获取</a></li>
+        <li><a href="./public/mediastream/index.html">获取音视频</a></li>
+    </ul>
 </body>
 
 </html>
