--- a/public/mediastream/index.html
+++ b/public/mediastream/index.html
@@ -50,7 +50,15 @@
 			<option value="sepia">sepia</option>
 		</select>
 	</div>
-	<video autoplay playinline id="player"></video>
+	<div>
+		<video autoplay playinline id="player"></video>
+	</div>
+	<div>
+		<button id="snapshot">Take snapshot</button>
+	</div>
+	<div>
+		<canvas id="picture"></canvas>
+	</div>
 	<script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
 	<script src="./js/client.js"></script>
 </body>
