采集音频数据

--- a/public/mediastream/index.html
+++ b/public/mediastream/index.html
@@ -51,7 +51,8 @@
 		</select>
 	</div>
 	<div>
-		<video autoplay playinline id="player"></video>
+		<audio id="audioplayer" autoplay controls></audio>
+		<!-- <video autoplay playinline id="player"></video> -->
 	</div>
 	<div>
 		<button id="snapshot">Take snapshot</button>
