--- a/public/mediastream/index.html
+++ b/public/mediastream/index.html
@@ -51,7 +51,7 @@
 		</select>
 	</div>
 	<div>
-		<audio id="audioplayer" autoplay controls></audio>
+		<audio autoplay controls id="audioplayer"></audio>
 		<!-- <video autoplay playinline id="player"></video> -->
 	</div>
 	<div>
