--- a/public/mediastream/index.html
+++ b/public/mediastream/index.html
@@ -51,8 +51,9 @@
 		</select>
 	</div>
 	<div>
-		<audio autoplay controls id="audioplayer"></audio>
-		<!-- <video autoplay playinline id="player"></video> -->
+		<!-- <audio autoplay controls id="audioplayer"></audio> -->
+		<video autoplay playinline id="player"></video>
+		<div id="constraints" style="border: 1;"></div>
 	</div>
 	<div>
 		<button id="snapshot">Take snapshot</button>
