--- a/public/mediastream/index.html
+++ b/public/mediastream/index.html
@@ -53,7 +53,7 @@
 	<div>
 		<!-- <audio autoplay controls id="audioplayer"></audio> -->
 		<video autoplay playinline id="player"></video>
-		<div id="constraints" style="border: 1;"></div>
+		<div id="constraints" style="background-color: antiquewhite;"></div>
 	</div>
 	<div>
 		<button id="snapshot">Take snapshot</button>
