--- a/public/mediastream/index.html
+++ b/public/mediastream/index.html
@@ -53,7 +53,12 @@
 	<div>
 		<!-- <audio autoplay controls id="audioplayer"></audio> -->
 		<video autoplay playinline id="player"></video>
+		<video playinline id="recplayer"></video>
 		<div id="constraints" style="background-color: antiquewhite;"></div>
+
+		<button id="record">Start Record</button>
+		<button id="recplay" disabled>Play</button>
+		<button id="download" disabled>Download</button>
 	</div>
 	<div>
 		<button id="snapshot">Take snapshot</button>
@@ -61,6 +66,7 @@
 	<div>
 		<canvas id="picture"></canvas>
 	</div>
+
 	<script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
 	<script src="./js/client.js"></script>
 </body>
