创建聊天室页面

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <ul>
         <li><a href="./public/device/index.html">设备获取</a></li>
         <li><a href="./public/mediastream/index.html">获取音视频</a></li>
+        <li><a href="./public/chatroom/index.html">聊天室</a></li>
     </ul>
 </body>
 
