--- a/public/peerconnection/index.html
+++ b/public/peerconnection/index.html
@@ -17,7 +17,7 @@
 
 <body>
 
-	<div>
+	<div align="center">
 		<label>roomid:</label>
 		<input type="input" id="room">
 		<button id="join" onclick="gotoNextPage()">Join</button>
