--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <li><a href="./public/device/index.html">设备获取</a></li>
         <li><a href="./public/mediastream/index.html">获取音视频</a></li>
         <li><a href="./public/chatroom/index.html">聊天室</a></li>
-        <li><a href="./public/peerconnection/index.html">一对一视频通话</a></a></li>
+        <li><a href="./public/peerconnection/index.html">视频通话</a></a></li>
     </ul>
 </body>
 
