--- a/public/mediastream/index.html
+++ b/public/mediastream/index.html
@@ -23,6 +23,7 @@
 		.sepia {
 			-webkit-filter: sepia(1);
 		}
+		
 	</style>
 </head>
 
@@ -50,11 +51,11 @@
 			<option value="sepia">sepia</option>
 		</select>
 	</div>
-	<div>
+	<div >
 		<!-- <audio autoplay controls id="audioplayer"></audio> -->
 		<video autoplay playinline id="player"></video>
 		<video playinline id="recplayer"></video>
-		<div id="constraints" style="background-color: antiquewhite;"></div>
+		<div id="constraints" style="background-color: rgb(242, 202, 150);"></div>
 
 		<button id="record">Start Record</button>
 		<button id="recplay" disabled>Play</button>
