--- a/public/mediastream/index.html
+++ b/public/mediastream/index.html
@@ -51,11 +51,14 @@
 			<option value="sepia">sepia</option>
 		</select>
 	</div>
+	<div>
+		<button id="sharescreen">share screen</button>
+	</div>
 	<div >
 		<!-- <audio autoplay controls id="audioplayer"></audio> -->
 		<video autoplay playinline id="player"></video>
 		<video playinline id="recplayer"></video>
-		<div id="constraints" style="background-color: rgb(242, 202, 150);"></div>
+		<div id="constraints" style="background-color: rgb(244, 144, 13);"></div>
 
 		<button id="record">Start Record</button>
 		<button id="recplay" disabled>Play</button>
