--- a/public/mediastream/index.html
+++ b/public/mediastream/index.html
@@ -52,7 +52,7 @@
 		</select>
 	</div>
 	<div>
-		<button id="sharescreen">share screen</button>
+		<button id="sharescreen">Share screen</button>
 	</div>
 	<div >
 		<!-- <audio autoplay controls id="audioplayer"></audio> -->
